--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -17,11 +17,29 @@ z-index: 2;
     }
 
     .left {
+            display: flex;
+            align-items: center;
+
         .logo {
             font-size: 40px;
             font-weight: 700;
             text-decoration: none;
             color: inherit; //inherits color from .topbar class
+            margin-right: 40px;
+        }
+        .itemContainer {
+            display: flex;
+            align-items: center;
+            margin-left: 30px;
+
+            .icon {
+                font-size: 18px;
+                margin-right: 5px;
+            }
+            span {
+                font-size: 15px;
+                font-weight: 500;
+            }
         }
     }
 }
