--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .intro {
     background-color: white;
     display: flex;
@@ -6,23 +8,23 @@
     .left {
         flex: 0.5;
         overflow: hidden;
-
-
+    
         .imgContainer {
-            width: 700px;
-            height: 700px;
-            background-color: crimson;
-            border-radius: 50%;
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            float: right;
-        }
+          width: 700px;
+          height: 700px;
+          background-color: white;
+          border-radius: 30%;
+          display: flex;
+          align-items: flex-end;
+          justify-content: center;
+          float: right;
 
         img{
             height: 90%;
         }
     }
+
+}
     .right {
         flex: 0.5;
         position: relative; 
