--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,116 @@
+// df: display flex
+// aic: align items center
+// jcc justify-content center
+// posa: postion absolute
+// w100vw: width 100vw
+// bc: background color
+@import "../../global.scss";
+
+
 .works {
-    background-color: lightgreen;
+    background-color: crimson;
+    display: flex;
+    align-items: center;  
+    justify-content: center;
+    position: relative;
+
+    .arrow {
+        height: 60px;
+        position: absolute;
+        cursor: pointer;
+
+        &.left {
+            left: 100px;
+          transform: rotateY(180deg);
+        }
+
+        &.right {
+            right: 100px;
+            
+        }
+    }
+
+
+    .slider {
+        height: 350px;
+        display: flex;
+        position: absolute;
+        left: 0; 
+
+        .container {
+            width: 100vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .item {
+                width: 700px;
+                height: 100%;
+                background-color: white;
+                border-radius: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                // split container in the middle in two parts
+                // one side with 4, the other with 8
+                // 6 on each side will make it equal
+                .left {
+                    flex: 4;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .leftContainer {
+                        width: 90%;
+                        height: 70%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+
+                    .imgContainer {
+                        width: 40px;
+                        height: 40px;
+                        border-radius: 50%;
+                        background-color: rgb(245, 179, 155);
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                    img{
+                        width: 25px;
+                    }
+                     } 
+                     h2 {
+                         font-size: 20px;
+                     }
+                     p {
+                         font-size: 13px;
+                     }
+                     span {
+                         font-size: 12px;
+                         font-weight: 600;
+                         text-decoration: underline;
+                         cursor: pointer;                  
+                     }
+                    }
+                }
+                .right {
+                    flex: 8;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    overflow: hidden;
+
+
+                    img {
+                        width: 400px;
+                    }
+                }
+            }
+        }
+    }
+    
 }
