--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -26,7 +26,6 @@
 
         &.right {
             right: 100px;
-            
         }
     }
 
@@ -36,6 +35,7 @@
         display: flex;
         position: absolute;
         left: 0; 
+        transition: all 1s ease-out;
 
         .container {
             width: 100vw;
@@ -57,7 +57,7 @@
                 // 6 on each side will make it equal
                 .left {
                     flex: 4;
-                    height: 100%;
+                    height: 80%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
