--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,8 +1,14 @@
 @import "../../global.scss";
 
-.intro {
+.about {
     background-color: white;
-    display: flex;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+   
+    h1 {
+        font-size: 50px;
+    }
 
     // 0.5 are the measurements for each side
     .left {
@@ -36,11 +42,6 @@
             display: flex;
             flex-direction: column; //vertical
             justify-content: center;
-
-            h1{
-                font-size: 60px;
-                margin: 10px 0; 
-            }
 
             h2{
                 font-size: 35px;
