--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,13 +2,7 @@
 
 .about {
     background-color: white;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-   
-    h1 {
-        font-size: 50px;
-    }
+    display: flex;
 
     // 0.5 are the measurements for each side
     .left {
@@ -27,6 +21,7 @@
 
         img{
             height: 90%;
+            border-radius: 20%;
         }
     }
 
@@ -36,18 +31,27 @@
         position: relative; 
         // when using abosolute, the parent should be relative
         .wrapper {
-            width: 100%;
-            height: 100%;
+            width: 80%;
+            height: 80%;
             padding-left: 50px;
             display: flex;
             flex-direction: column; //vertical
             justify-content: center;
 
-            h2{
-                font-size: 35px;
+            h1{
+                font-size: 50px;
+                margin: 10px 0; 
             }
-            h3{ 
-                font-size: 30px;
+
+            .a-sub {
+              font-size: 30;
+              margin: 20px 0px;
+              font-weight: 500;
+            }
+            
+            .a-desc{
+                font-size: 30;
+                font-weight: 300;
             }
         }
             a {
