--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -6,12 +6,12 @@
 .c {
     height: 100vh;
     position: relative;
+    background-color: white;
   }
   
   .c-bg {
     width: 20px;
     height: 100%;
-    background-color: white;
     position: absolute;
   }
   
@@ -70,7 +70,7 @@
   }
   
   textarea {
-    width: 100%;
+    width: 60%;
     margin: 10px 0px;
     font-size: 14px;
     padding-left: 10px;
@@ -78,7 +78,8 @@
   
   button {
     border: none;
-    padding: 15px;
+    padding: 10px;
+    margin-top: 10px;
     background-color: #15023a;
     color: white;
     font-weight: 500;
