--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -80,8 +80,8 @@
     border: none;
     padding: 10px;
     margin-top: 10px;
-    background-color: #15023a;
-    color: white;
+    background-color: white;
+    color: #15023a;
     font-weight: 500;
     cursor: pointer;
   }
