--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -84,6 +84,13 @@
     color: white;
     font-weight: 500;
     cursor: pointer;
+    font-size: 20px;
+    width: 50%;
+  }
+
+  .span1 {
+    font-size: 20px;
+    margin-top: 10px;
   }
   
   @media screen and (max-width: 480px) {
