--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -86,6 +86,7 @@
     cursor: pointer;
     font-size: 20px;
     width: 50%;
+    margin-bottom: 10px;
   }
 
   .formhide {
@@ -93,7 +94,6 @@
   }
   .span1 {
     font-size: 20px;
-    margin-top: 10px;
   }
   
   @media screen and (max-width: 480px) {
