--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -4,6 +4,11 @@
     background-color: white;
     display: flex;
 
+    //responsiveness
+    @include mobile{
+        flex-direction: column;
+        align-items: center;
+    }
     // 0.5 are the measurements for each side
     .left {
         flex: 0.5;
@@ -19,9 +24,15 @@
           justify-content: center;
           float: right;
 
+          @include mobile{
+              align-items: flex-start;
+          }
         img{
             height: 90%;
-            border-radius: 20%;
+            // border-radius: 20%;
+            @include mobile{
+                height: 50%;
+            }
         }
     }
 
@@ -38,9 +49,18 @@
             flex-direction: column; //vertical
             justify-content: center;
 
+            @include mobile{
+                padding-left: 0;
+                align-items: center;
+            }
+
             h1{
                 font-size: 50px;
                 margin: 10px 0; 
+                
+            @include mobile{
+                font-size: 40px;
+            }
             }
 
             h2{
@@ -50,6 +70,10 @@
             h3{ 
                 font-size: 30px;
                 margin: 10px 0; 
+            
+          @include mobile{
+                    font-size: 20px;
+                }
             }
         }
             a {
