--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -33,6 +33,10 @@ transition: all 1s ease; //color transition smooth
             align-items: center;
             margin-left: 30px;
 
+            @include mobile{
+                display: none;
+              }
+              
             .icon {
                 font-size: 18px;
                 margin-right: 5px;
